--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\norma\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-2.3.0_1.jar=C:\\Users\\marus\\OneDrive\\Documentos\\GitHub
+user.properties.file=C:\\Users\\marus\\AppData\\Roaming\\NetBeans\\17\\build.properties
