--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mariadb-java-client-2.3.0_1.jar=C:\\Users\\marus\\OneDrive\\Documentos\\GitHub
-user.properties.file=C:\\Users\\marus\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
