--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mariadb-java-client-2.3.0_1.jar=C:\\Users\\norma\\Desktop\\mariadb-java-client-2.3.0_1.jar
 user.properties.file=C:\\Users\\norma\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
